Fixing filename problem

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	              </div>
 	              <div class="card-body">
 	                  
-	                   <form class="form-horizontal" action="form-mailer.php" method="post">
+	                   <form class="form-horizontal" action="from-mailer.php" method="post">
 	                  <div class="row">
 	                    <label class="col-md-3 col-form-label">From Username :</label>
 	                    <div class="col-md-9">
